working code + swagger added
