# routes/auth.js
@@ -1,0 +1,6 @@
+const router = require('express').Router();
+const authController = require('../controller/auth');
+
+router.post('/login',authController.userLogin);
+
+module.exports = router;
